# showoff-python

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  MANIFEST.in  Makefile  README.md  ROADMAP.md  RULES.md  SECURITY.md  compose.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/showoff_api/: __main__.py  app.py  auth.py  config.py  repository.py  schemas.py
src/showoff_async/: __main__.py  app.py  config.py  mock_app.py  mock_main.py  models.py  service.py
src/showoff_cli/: __main__.py  cli.py  core.py
src/showoff_event/: __init__.py  audit_app.py  audit_main.py  bus.py  config.py  feed_app.py  feed_main.py  lifespan.py  models.py  notification_app.py  notification_main.py  platform_app.py  platform_main.py  store.py
src/showoff_micro/: __init__.py  auth_app.py  auth_client.py  auth_main.py  config.py  data_app.py  data_client.py  data_main.py  models.py  store.py  worker_main.py  worker_service.py
src/showoff_perf/: __init__.py  app.py  cache.py  compute.py  config.py  cykernels.c  cykernels.pyx  kernels.py  models.py
src/showoff_pipeline/: __main__.py  app.py  config.py  models.py  pipeline.py
src/showoff_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/showoff_queue/: __main__.py  app.py  config.py  models.py  queue.py
src/showoff_saas/: __init__.py  app.py  config.py  models.py  repository.py  service.py
tests/e2e/: test_cli_flow.py  test_http_flow.py  test_http_projection_flow.py  test_perf_flow.py  test_pipeline_flow.py  test_queue_flow.py  test_saas_flow.py  test_worker_flow.py
tests/integration/: test_api.py  test_app.py  test_cli_commands.py  test_event_projection_flow.py  test_micro_flow.py  test_perf_api.py  test_pipeline_api.py  test_queue_api.py  test_saas_api.py
tests/smoke/: test_cli_help.py  test_docs.py
tests/unit/: test_app.py  test_app_state.py  test_audit_app.py  test_auth.py  test_auth_app.py  test_bus.py  test_cache.py  test_cli.py  test_compute.py  test_config.py  test_core.py  test_data_app.py  test_feed_app.py  test_kernels.py  test_main.py  test_mock_app.py  test_notification_app.py  test_pipeline.py  test_platform_app.py  test_queue.py  test_repository.py  test_service.py  test_store.py  test_worker_service.py
