[build-system]
requires = ["Cython==3.2.4", "setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "showoff-python"
version = "0.8.0"
description = "Production-ready high-performance optimization service."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.135.3",
  "redis==7.4.0",
  "uvicorn==0.44.0",
]

[project.optional-dependencies]
dev = [
  "build==1.4.2",
  "coverage[toml]==7.13.5",
  "Cython==3.2.4",
  "httpx==0.28.1",
  "pytest==9.0.2",
  "ruff==0.15.9",
]

[project.scripts]
showoff-perf-api = "showoff_perf.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
source = ["showoff_perf"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "smoke: smoke tests",
  "e2e: end-to-end tests",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
