[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "showoff-python"
version = "0.10.0"
description = "Production-ready event-driven platform."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.135.3",
  "redis==7.4.0",
  "uvicorn==0.44.0",
]

[project.optional-dependencies]
dev = [
  "build==1.4.2",
  "coverage[toml]==7.13.5",
  "httpx==0.28.1",
  "pytest==9.0.2",
  "ruff==0.15.9",
]

[project.scripts]
showoff-platform-api = "showoff_event.platform_main:main"
showoff-feed-api = "showoff_event.feed_main:main"
showoff-notification-api = "showoff_event.notification_main:main"
showoff-audit-api = "showoff_event.audit_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
source = ["showoff_event"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "smoke: smoke tests",
  "e2e: end-to-end tests",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
